--- a/index.html
+++ b/index.html
@@ -8,16 +8,101 @@
   <meta name="author" content="">
   <meta name="description" content="Simple Bootstrap Site for Homework">
   <title>Bootstrap Website for Homework</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" herf="#"><img src="img/w3newbie.png"></a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Testimonials</a></li>
+          <li><a href="#">Contact</a></li>
+      </div>
+    </div>
+  </nav>
 
+  <div id="myCarousel" class="carousel slide" data-ridge="carousel">
+    <ol class="carousel-indicators">
+      <li data-targets="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-targets="#myCarousel" data-slide-to="1"></li>
+      <li data-targets="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="img/mountains.png">
+        <div class="carousel-caption">
+          <hi>get to know bootstrap</h1>
+            <br>
+            <button type="button" class="btn btn-default">Get Started</button>
+        </div>
+      </div>
+      <!--- End Active -->
+      <div class="item">
+        <img src="img/snow.png">
+      </div>
+      <div class="item">
+        <img src="img/red.png">
+      </div>
+    </div>
+    <!--- Start Slider Controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"
+  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+  <span class="sr-only">Next</span>
+</a>
+
+  </div> <!--- End Slider -->
+
+  <div class="container text-center">
+    <h2>What We're Using</h2>
+    <div class="row">
+      <div class="col-sm-4">
+<img src="img/html5.png" id="icon">
+<h4>HTML5</h4>
+      </div>
+      <div class="col-sm-4">
+<img src="img/bootstrap.png" id="icon">
+<h4>Bootstrap</h4>
+      </div>
+      <div class="col-sm-4">
+<img src="img/css3.png" id="icon">
+<h4>CSS3</h4>
+      </div>
+    </div>
+  </div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <h4>Here's the cool thing about Bootstrap...</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+    <div class="col-md-6">
+<img src="img/bootstrap2.jpg" class="img-responsive">
+    </div>
+  </div>
+</div>
 
 </body>
 
